# mx-ledger-nano

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  README.md  prepare-devenv  tests.py
.github/workflows/: ci-workflow.yml  deviceApp.yml  lint-workflow.yml  main.yml  testApp.yml
fuzzing/: CMakeLists.txt  fuzz_esdt_info.c  fuzz_tx.c
src/: addressHelpers.c  addressHelpers.h  address_helpers.c  address_helpers.h  base64.h  constants.h  getAddress.c  getAddress.h  getPrivateKey.c  get_address.c  get_address.h  get_private_key.c  get_private_key.h  globals.c  globals.h  main.c  menu.c  menu.h  parseTx.c  parseTx.h  parse_tx.c  parse_tx.h  provideESDTInfo.c  provideESDTInfo.h  provide_ESDT_info.c  provide_ESDT_info.h  selectAccount.c  selectAccount.h  setAddress.c  setAddress.h  set_address.c  set_address.h  signMsg.c  signMsg.h  signMsgAuthToken.c  signMsgAuthToken.h  signTx.c  signTx.h  signTxHash.c  signTxHash.h  (+14 more)
testApp/: Makefile  erdLedgerTxCli.go  go.mod  main.go
testApp/cmd/common/: testscommon.go
testApp/cmd/testApp/: main.go
testApp/cmd/testAuthToken/: main.go
testApp/cmd/testESDT/: main.go
testApp/cmd/testMsgSign/: main.go
testApp/cmd/testTxHashSign/: main.go
testApp/ledger/: nanos.go  structs.go
tests/: conftest.py  get_image_position.py  requirements.txt  test_elrond.py  test_multiversx.py  usage.md  utils.py
